# Eigen-trace

./: .gitignore  BENCHMARK_SUMMARY.md  IMPLEMENTATION.md  INTEGRATIONS.md  INTEGRATION_CAPABILITIES.md  INTEGRATION_SUMMARY.md  LICENSE  Makefile  QUICKSTART.md  README.md  debug_signal.py  demo.py  outputs.jsonl  pyproject.toml  requirements.txt  results.jsonl
.github/workflows/: avp_tests.yml
bench/: README.md  __init__.py  measure.py  repro.py  run_suite.py
bench/configs/: suite.yaml  test_suite.yaml
docs/: SAMPLE_REPORT.md  SAVINGS.md  TEST_SUITE.md
examples/: example_langchain.py  example_llamaindex.py  example_zenml.py
inspect/: __init__.py  run_inspection.py
inspection/: frequency_attribution.py  gradient_spectrum.py  residual_spectrum.py  run_inspection.py
losses/: __init__.py  baselines.py  logosloss.py
models/: __init__.py  lstm.py  mlp.py  unet.py
reports/: REPORT_TEMPLATE.md  generate_report.py
scripts/: escalate.py  make_report.py  run_avp_tests.py
src/logoslabs/: __init__.py  avp.py  cli.py  eigentrace_contract.py  heuristics.py  logosloss.py  tokenizers.py
src/logoslabs/integrations/: zenml.py  (+3 more)
tasks/: __init__.py  image_denoise.py  time_series.py
tests/: README.md  test_avp.py  test_benchmark.py  test_cli.py  test_eigentrace_code_linter.py  test_eigentrace_cost_shaver.py  test_eigentrace_private_eval.py  test_escalate.py  test_heuristics.py  test_logosloss.py  test_parity.py  test_report_generation.py  test_tokenizers.py
tests/fixtures/: code_bad.jsonl  code_good.jsonl  private_sensitive.jsonl  prose_bad.jsonl  prose_good.jsonl
